Se han añadido las imagenes svg falta de tiempo

--- a/index.html
+++ b/index.html
@@ -15,6 +15,7 @@
       <!-- Header -->
       <header>
         <h1 class="titulo">Corte Ingles<br />Firma de Libros</h1>
+        <!-- Seccion Retrato -->
         <section class="imagenRetrato">
           <picture>
             <source
@@ -35,7 +36,8 @@
       </header>
       <!-- Main -->
       <main>
-        <section class="Seccion_Libro">
+        <!-- Seccion Libro -->
+        <section class="Seccion_Libro"> 
           <picture>
             <source
               srcset="
@@ -52,6 +54,7 @@
           </section>
         </section>
         <br />
+        <!-- Seccion Mapa -->
         <section class="Seccion_Mapa">
           <h4 id="direccion">
             Av. de Jaume III, 15, 07012 Palma, Illes Balears
